--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>mangcoding Store</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="icon" href="./assets/img/Logo.svg">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
 <body>
+
     <header class="header">
         <div class="container">
             <div class="row">
@@ -47,6 +51,309 @@
         </div>
 
     </header>
+    <main>
+        <section class="begin">
+            <div class="container">
+                <div class="row">
+                    <div class="beginning">
+                        <p class="first-paragraf">Let's <span>Begins</span></p>
+                        <p class="second-paragraf">Let's Find The Right <span>Course</span> For you</p>
+                        <p class="third-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                            dignissim, sem non convallis molestie.</p>
+                        <nav class="nav">
+                            <a href="#" class="register">Register</a>
+                            <div class="play-video">
+                                <img src="./assets/img/play.svg" alt="play">
+                                <a href="#">Play Video</a>
+                            </div>
+
+                        </nav>
+                    </div>
+                    <div class="image">
+                        <img src="./assets/img/Group.jpg" alt="Group">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="What-We-Give">
+            <div class="container">
+                <div class="row">
+                    <div class="details">
+                        <p class="first-paragraf">WHAT WE GIVE</p>
+                        <p class="second-paragraf">What do You Get From Us</p>
+                        <p class="third-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                            dignissim, sem non convallis molestie.</p>
+                    </div>
+                    <div class="Get-From-Us">
+                        <div class="our-features">
+                            <div>
+                                <img src="./assets/img/Professional_Teacher.svg" alt="Professional_Teacher">
+                                <h2>Professional Teacher</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                    convallis molestie.</p>
+                            </div>
+                            <div>
+                                <img src="./assets/img/Course_Certificate.svg" alt="Course_Certificate">
+                                <h2>Course Certificate</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                    convallis molestie.</p>
+                            </div>
+                            <div>
+                                <img src="./assets/img/interesting_learning.svg" alt="interesting_learning">
+                                <h2>interesting learning</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                    convallis molestie.</p>
+                            </div>
+                            <div>
+                                <img src="./assets/img/Videos_Course.svg" alt="Videos_Course.svg">
+                                <h2>Videos Course</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                    convallis molestie.</p>
+                            </div>
+                        </div>
+                        <div class="more-features">
+                            <img src="./assets/img/left_stocks.svg" alt="left_stocks">
+                            <img src="./assets/img/right_stocks.svg" alt="right_stocks">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="people_opinion">
+            <div class="container">
+                <div class="row">
+                    <div class="image">
+                        <img src="./assets/img/People-Taking-Courses.png" alt="People-Taking-Courses">
+                    </div>
+                    <div class="People-Taking-Courses">
+                        <div class="first-paragraf">
+                            <p>SELECTED COURSE</p>
+                        </div>
+                        <div class="second-paragraf">
+                            <p>People Taking Courses</p>
+                        </div>
+                        <div class="third-paragraf">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non
+                                convallis molestie.</p>
+                        </div>
+                        <div class="number">
+                            <div>
+                                <p class="num">6,000</p>
+                                <p class="paragraf">People Views</p>
+                            </div>
+                            <div>
+                                <p class="num">4,000</p>
+                                <p class="paragraf">User</p>
+                            </div>
+                            <div>
+                                <p class="num">100</p>
+                                <p class="paragraf">Course</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="courses">
+            <div class="container">
+                <div class="row">
+                    <div class="nav">
+                        <div class="course">
+                            <div class="image">
+                                <img src="./assets/img/HTML & CSS.png" alt="HTML & CSS">
+                                <div class="image-info">
+                                    <span class="first-span">Best Course</span>
+                                    <span class="second-span">$ 20 USD</span>
+                                </div>
+                            </div>
+                            <div class="info-course">
+                                <div class="first-row">
+                                    <span>HTML & CSS</span>
+                                    <span>1,500 Views</span>
+                                </div>
+                                <div class="second-row">
+                                    <span>120 Videos</span>
+                                    <span>2 Teacher</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course">
+                            <div class="image">
+                                <img src="./assets/img/Photographer.png" alt="Photographer">
+                                <div class="image-info">
+                                    <span class="first-span">Best Course</span>
+                                    <span class="second-span">$ 20 USD</span>
+                                </div>
+                            </div>
+                            <div class="info-course">
+                                <div class="first-row">
+                                    <span>Photographer</span>
+                                    <span>1,500 Views</span>
+                                </div>
+                                <div class="second-row">
+                                    <span>100 Videos</span>
+                                    <span>2 Teacher</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course">
+                            <div class="image">
+                                <img src="./assets/img/JavaScript.png" alt="JavaScript">
+                                <div class="image-info">
+                                    <span class="first-span">Best Course</span>
+                                    <span class="second-span">$ 20 USD</span>
+                                </div>
+                            </div>
+                            <div class="info-course">
+                                <div class="first-row">
+                                    <span>JavaScript</span>
+                                    <span>1,500 Views</span>
+                                </div>
+                                <div class="second-row">
+                                    <span>120 Videos</span>
+                                    <span>2 Teacher</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course">
+                            <div class="image">
+                                <img src="./assets/img/Desain Grafis.png" alt="Desain Grafis">
+                                <div class="image-info">
+                                    <span class="first-span">Best Course</span>
+                                    <span class="second-span">$ 20 USD</span>
+                                </div>
+                            </div>
+                            <div class="info-course">
+                                <div class="first-row">
+                                    <span>Desain Grafis</span>
+                                    <span>1,500 Views</span>
+                                </div>
+                                <div class="second-row">
+                                    <span>100 Videos</span>
+                                    <span>2 Teacher</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <p class="first-paragraf">AVAILABLE FOR YOU</p>
+                        <p class="second-paragraf">Available Courses</p>
+                        <p class="third-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                            dignissim, sem non convallis molestie.</p>
+                        <div class="see-all">
+                            <span>See all</span>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="testimonials">
+            <div class="container">
+                <h2>Testimonials</h2>
+                <div class="row">
+                    <div class="testimonial">
+                        <div class="profile">
+                            <img src="./assets/img/omar.jpg" alt="omar">
+                            <div class="user-name">
+                                <h3>Omar Hamayel</h3>
+                                <p>Client</p>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                        </div>
+                        <blockquote>
+                            <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.
+                            </q>
+                        </blockquote>
+                    </div>
+                    <div class="testimonial">
+                        <div class="profile">
+                            <img src="./assets/img/omar.jpg" alt="omar">
+                            <div class="user-name">
+                                <h3>Omar Hamayel</h3>
+                                <p>Client</p>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                            <img src="./assets/img/Star.svg" alt="Star">
+                        </div>
+                        <blockquote>
+                            <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.
+                            </q>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-start">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="./assets/img/Logo.svg" alt="logo" />
+                            mangcoding Store
+                        </a>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor,
+                        erat sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+                    <div class="social-media-page">
+                        <a href="#"><img src="./assets/img/facebook.svg" alt="facebook-logo"></a>
+                        <a href="#"><img src="./assets/img/Twitter.svg" alt="Twitter-logo"></a>
+                        <a href="#"><img src="./assets/img/linkedin.svg" alt="linkedin-logo"></a>
+                        <a href="#"><img src="./assets/img/instagram.svg" alt="instagram-logo"></a>
+                    </div>
+
+                </div>
+                <div class="footer-end">
+                    <div class="footer-end-item">
+                        <h2>Home</h2>
+                        <nav class="nav">
+                            <a href="#">Product</a>
+                            <a href="#">Course</a>
+                            <a href="#">About Us</a>
+                            <a href="#">Log in</a>
+                        </nav>
+                    </div>
+                    <div class="footer-end-item">
+                        <h2>Course</h2>
+                        <nav class="nav">
+                            <a href="#">HTML & CSS</a>
+                            <a href="#">Javascript</a>
+                            <a href="#">Fotographer</a>
+                            <a href="#">Desain Grafis</a>
+                        </nav>
+                    </div>
+                    <div class="footer-end-item">
+                        <h2>Article</h2>
+                        <nav class="nav">
+                            <a href="#">New</a>
+                            <a href="#">Old</a>
+                            <a href="#">Trend</a>
+                            <a href="#">Popular</a>
+                        </nav>
+                    </div>
+                    <div class="footer-end-item">
+                        <h2>Contact Us</h2>
+                        <nav class="nav">
+                            <p>CCdoc123&#64;gmail.com</p>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
